@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-02T02:17:26Z",
+  "timestamp" : "2022-07-02T08:27:17Z",
   "count_outdated" : 218,
   "uniques_outdated" : 103,
   "count" : 242,
-  "uniques" : 117,
+  "uniques" : 118,
   "clones" : [
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -95,6 +95,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-07-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
