@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-06-18T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -66,6 +66,11 @@
       "timestamp": "2022-07-01T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
